<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_money_in_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_money_bank" />

        <Button
            android:id="@+id/btn_money_in_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/placeholder_money"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <TextView
            android:id="@+id/text_view_checks_not_cashed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="187dp"
            android:text="@string/total_checks_not_cashed" />

        <Button
            android:id="@+id/btn_checks_not_cashed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/placeholder_money" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_view_money_in_envelopes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_money_envelopes"
            app:layout_constraintStart_toStartOf="@+id/envelopes_recycler"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_money_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/money_remaining"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_money_in_envelopes" />

        <TextView
            android:id="@+id/header_envelopes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/envelopes"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/envelopes_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_money_remaining" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/envelopes_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_envelopes">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/text_money_in_envelopes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/placeholder_money"
            app:layout_constraintStart_toEndOf="@+id/text_view_money_in_envelopes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_money_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_money"
            app:layout_constraintStart_toEndOf="@+id/text_view_money_remaining"
            app:layout_constraintTop_toBottomOf="@+id/text_view_money_in_envelopes" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>